--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,20 @@
-name: 运行爬虫脚本
+name: 爬虫 & 部署
 
 on:
+  schedule:
+    - cron: '0 */6 * * *'  # 每6小时运行一次
   push:
     branches: [ main ]
   workflow_dispatch:  # 允许手动触发
 
+# 设置 GITHUB_TOKEN 权限
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+
 jobs:
-  scrape:
+  scrape-and-deploy:
     runs-on: ubuntu-latest
     
     steps:
@@ -22,17 +30,23 @@ jobs:
       - name: 安装依赖
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then
-            pip install -r requirements.txt
-          fi
-          # 如果没有 requirements.txt，可以在这里手动安装常用爬虫库
-          # pip install requests beautifulsoup4 lxml
+          pip install -r requirements.txt
 
       - name: 执行爬虫脚本
         run: python scrape_endclothing.py
-        
-      - name: 上传结果文件
-        uses: actions/upload-artifact@v4
+
+      - name: 提交更新的数据文件
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add endclothing_70off.json data.js
+          git diff --staged --quiet || git commit -m "Update product data [skip ci]"
+          git push
+
+      - name: 部署到 GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          name: scrape-results
-          path: output.json  # 替换为你的输出文件路径
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./
+          publish_branch: gh-pages
+          exclude_assets: '.github,scrape_endclothing.py,requirements.txt,.git'
